--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -2822,9 +2822,9 @@
   booktitle = {52nd Annual Meeting of the Association for Computational Linguistics},
   year      = {2014},
   pages     = {370-379},
+  doi       = {10.3115/v1/P14-1035},
   owner     = {Vincent},
   timestamp = {2017.12.07},
-  url       = {http://acl2014.org/acl2014/P14-1/pdf/P14-1035.pdf},
 }
 
 @InProceedings{Bamman2019,
@@ -5956,6 +5956,18 @@
   timestamp = {2021.03.06},
 }
 
+@Article{Boyd2020,
+  author    = {Boyd, R. L. and Blackburn, K. G. and Pennebaker, J. W.},
+  title     = {The narrative arc: Revealing core narrative structures through text analysis},
+  journal   = {Science Advances},
+  year      = {2020},
+  volume    = {6},
+  number    = {32},
+  doi       = {10.1126/sciadv.aba2196},
+  owner     = {Vincent},
+  timestamp = {2022.12.06},
+}
+
 @Article{Boykov2004,
   author    = {Boykov, Y. and Kolmogorov, V.},
   title     = {An experimental comparison of min-cut/max- flow algorithms for energy minimization in vision},
@@ -6713,6 +6725,17 @@
   timestamp = {2020.12.12},
 }
 
+@InProceedings{Brunner2020,
+  author    = {Brunner, A. and Engelberg, S. and Jannidis, F. and Tu, N. D. T. and Weimer, L.},
+  title     = {Corpus REDEWIEDERGABE},
+  booktitle = {12th Language Resources and Evaluation Conference},
+  year      = {2020},
+  pages     = {796-805},
+  owner     = {Vincent},
+  timestamp = {2022.12.06},
+  url       = {https://aclanthology.org/2020.lrec-1.100/},
+}
+
 @Article{Bryan2004,
   author    = {Bryan, P.},
   title     = {The Settlement of the Chinese in Jamaica: 1854-c.1970},
@@ -6827,7 +6850,7 @@
 @InProceedings{Buechler2018,
   author    = {Büchler, M. and Franzini, G. and Kestemont, M. and Manjavacas, E.},
   title     = {The recreation of {Harry Potter}: Tracing style and content across novels, movie scripts and fanfiction},
-  booktitle = {Digital Humanities},
+  booktitle = {Digital Humanities Conference},
   year      = {2018},
   owner     = {Vincent},
   timestamp = {2022.03.25},
@@ -9682,7 +9705,7 @@ arXiv: https://arxiv.org/abs/1709.07604},
 @InProceedings{Clement2009,
   author    = {Clement, T. and Plaisant, C. and Vuillemot, R.},
   title     = {The story of one: Humanity scholarship with visualization and text analysis},
-  booktitle = {Digital Humanities},
+  booktitle = {Digital Humanities Conference},
   year      = {2009},
   owner     = {Vincent},
   timestamp = {2020.08.13},
@@ -13650,6 +13673,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2019.04.13},
 }
 
+@Article{Egbert2020,
+  author    = {Egbert, J. and Mahlberg, M.},
+  title     = {Fiction - One register or two?},
+  journal   = {Register Studies},
+  year      = {2020},
+  volume    = {2},
+  number    = {1},
+  pages     = {72-101},
+  doi       = {10.1075/rs.19006.egb},
+  owner     = {Vincent},
+  timestamp = {2022.12.06},
+}
+
 @Article{Eguiluz2005,
   author    = {Eguíluz, V. M. and Chialvo, D. R. and Cecchi, G. A. and Baliki, M. and Apkarian, A. V.},
   title     = {Scale-Free Brain Functional Networks},
@@ -13682,6 +13718,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2019.04.03},
   url       = {http://www.theses.fr/2008PA070095},
+}
+
+@TechReport{Ehrmanntraut2022,
+  author      = {Ehrmanntraut, A. and Konle, L. and Jannidis, F.},
+  title       = {{LLpro}: A Literary Language Processing Pipeline for German Narrative Texts},
+  institution = {Julius Maximilians Universität Würzburg},
+  year        = {2022},
+  owner       = {Vincent},
+  timestamp   = {2022.12.06},
+  url         = {https://github.com/aehrm/LLpro},
 }
 
 @Article{Eichenlaub2019,
@@ -14469,7 +14515,7 @@ arXiv: https://arxiv.org/abs/1709.07604},
 @InProceedings{Evalyn2018,
   author    = {Evalyn, L. and Gauch, S. and Shukla, M.},
   title     = {Analyzing Social Networks of XML Plays: Exploring Shakespeare's Genres},
-  booktitle = {Digital Humanities},
+  booktitle = {Digital Humanities Conference},
   year      = {2018},
   pages     = {368-371},
   owner     = {Vincent},
@@ -15454,7 +15500,7 @@ arXiv: https://arxiv.org/abs/1709.07604},
 @InProceedings{Fischer2015a,
   author    = {Fischer, F. and Göbel, M. and Kampkaspar, D. and Trilcke, P.},
   title     = {Digital Network Analysis of Dramatic Texts},
-  booktitle = {Digital Humanities},
+  booktitle = {Digital Humanities Conference},
   year      = {2015},
   groups    = {Character Nets},
   owner     = {Vincent},
@@ -15487,7 +15533,7 @@ arXiv: https://arxiv.org/abs/1709.07604},
 @InProceedings{Fischer2017a,
   author    = {Fischer, F. and Göbel, M. and Kampkaspar, D. and Kittel, C. and Trilcke, P.},
   title     = {Network Dynamics, Plot Analysis: Approaching the Progressive Structuration of Literary Texts},
-  booktitle = {Digital Humanities},
+  booktitle = {Digital Humanities Conference},
   year      = {2017},
   owner     = {Vincent},
   timestamp = {2019.06.24},
@@ -16237,6 +16283,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://archive.org/details/freytagstechniqu00freyuoft},
 }
 
+@Book{Freytag1908,
+  title     = {Freytag's Technique of the Drama: An Exposition of Dramatic Composition and Art},
+  publisher = {Scott, Foresman and Co.},
+  year      = {1908},
+  author    = {Freytag, G.},
+  owner     = {Vincent},
+  timestamp = {2022.12.06},
+  url       = {https://ia600208.us.archive.org/25/items/freytagstechniqu00freyuoft/freytagstechniqu00freyuoft.pdf},
+}
+
 @InProceedings{Friedland2009,
   author    = {Friedland, G. and Gottlieb, L. and Janin, A.},
   title     = {Using Artistic Markers and Speaker Identification for Narrative-Theme Navigation of Seinfeld Episodes},
@@ -16278,6 +16334,32 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2020.07.22},
   url       = {https://www.aaai.org/ocs/index.php/ICWSM/ICWSM14/paper/view/8122},
+}
+
+@InProceedings{Froese2019,
+  author    = {Froese, V. and Jain, B. and Niedermeier, R. and Renken, M.},
+  title     = {Comparing Temporal Graphs Using Dynamic Time Warping},
+  booktitle = {International Conference on Complex Networks and Their Applications},
+  year      = {2019},
+  volume    = {882},
+  series    = {Studies in Computational Intelligence},
+  pages     = {469-480},
+  publisher = {Springer},
+  doi       = {10.1007/978-3-030-36683-4_38},
+  owner     = {Vincent},
+  timestamp = {2022.12.06},
+}
+
+@Article{Froese2020,
+  author    = {Froese, V. and Jain, B. and Niedermeier, R. and Renken, M.},
+  title     = {Comparing temporal graphs using dynamic time warping},
+  journal   = {Social Network Analysis and Mining},
+  year      = {2020},
+  volume    = {10},
+  pages     = {50},
+  doi       = {10.1007/s13278-020-00664-5},
+  owner     = {Vincent},
+  timestamp = {2022.12.06},
 }
 
 @Article{Fronczak2004,
@@ -18709,6 +18791,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2020.08.13},
   url       = {https://gallica.bnf.fr/ark:/12148/bpt6k3398326j.texteImage},
+}
+
+@Book{Greimas1983,
+  title     = {Structural Semantics: An Attempt at a Method},
+  publisher = {University of Nebraska Press},
+  year      = {1983},
+  author    = {Greimas, A. J.},
+  owner     = {Vincent},
+  timestamp = {2022.12.06},
+  url       = {https://books.google.fr/books/?id=sIZrAAAAIAAJ},
 }
 
 @TechReport{Grener2017,
@@ -22104,6 +22196,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2021.09.16},
 }
 
+@InCollection{Huehn2013,
+  author    = {Hühn, P.},
+  title     = {Event and Eventfulness},
+  booktitle = {The living handbook of narratology},
+  publisher = {Hamburg University Press},
+  year      = {2013},
+  owner     = {Vincent},
+  timestamp = {2022.12.06},
+  url       = {https://www-archiv.fdm.uni-hamburg.de/lhn/node/39.html},
+}
+
 @InProceedings{Hui2018,
   author    = {Hui, J. S. and Gergle, D. and Gerber, E. M.},
   title     = {{IntroAssist}},
@@ -22765,7 +22868,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 @InProceedings{Jaenicke2017,
   author    = {Jänicke, S. and Focht, J.},
   title     = {Untangling the social network of musicians},
-  booktitle = {Digital Humanities},
+  booktitle = {Digital Humanities Conference},
   year      = {2017},
   owner     = {Vincent},
   timestamp = {2020.08.11},
@@ -22837,6 +22940,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.18653/v1/2020.coling-main.536},
   owner     = {Vincent},
   timestamp = {2021.09.18},
+}
+
+@InProceedings{Jahan2021,
+  author    = {Jahan, L. and Mittal, R. and Finlayson, M.},
+  title     = {Inducing Stereotypical Character Roles from Plot Structure},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing},
+  year      = {2021},
+  pages     = {492-497},
+  doi       = {10.18653/v1/2021.emnlp-main.39},
+  owner     = {Vincent},
+  timestamp = {2022.12.06},
 }
 
 @Article{Jahn1996,
@@ -22979,15 +23093,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 }
 
 @Article{Janickyj2022,
-  author        = {Janickyj, M. and Curley, D. and Mac Carron, P. and Mccarthy, M. and Yose, J. and Kenna, R.},
-  title         = {The enigmatic {Fraoch} and his eponymous tale - Network analysis of an early {Irish} heroic romance},
-  journal       = {Advances in Complex Systems},
-  year          = {2022},
-  volume        = {in press},
-  __markedentry = {[Vincent:]},
-  doi           = {10.1142/s0219525922400069},
-  owner         = {Vincent},
-  timestamp     = {2022.08.06},
+  author    = {Janickyj, M. and Curley, D. and Mac Carron, P. and Mccarthy, M. and Yose, J. and Kenna, R.},
+  title     = {The enigmatic {Fraoch} and his eponymous tale - Network analysis of an early {Irish} heroic romance},
+  journal   = {Advances in Complex Systems},
+  year      = {2022},
+  volume    = {25},
+  number    = {5\&6},
+  pages     = {2240006},
+  doi       = {10.1142/s0219525922400069},
+  owner     = {Vincent},
+  timestamp = {2022.08.06},
 }
 
 @InCollection{Jannidis2013,
@@ -23004,7 +23119,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 @InProceedings{Jannidis2016,
   author    = {Jannidis, F. and Reger, I. and Krug, M. and Weimer, L. and Macharowsky, L. and Puppe, F.},
   title     = {Comparison of Methods for the Identification of Main Characters in German Novels},
-  booktitle = {Digital Humanities},
+  booktitle = {Digital Humanities Conference},
   year      = {2016},
   pages     = {578-582},
   owner     = {Vincent},
@@ -25401,7 +25516,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 @InProceedings{Klein2012,
   author    = {Klein, L.},
   title     = {Social network analysis and visualization in 'The papers of Thomas Jefferson'},
-  booktitle = {Digital Humanities},
+  booktitle = {Digital Humanities Conference},
   year      = {2012},
   pages     = {12},
   owner     = {Vincent},
@@ -25516,7 +25631,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 @InProceedings{Klinger2016,
   author    = {Klinger, R. and Suliya, S. S. and Reiter , N.},
   title     = {Automatic Emotion Detection for Quantitative Literary Studies - A Case Study on Kafka's 'Das Schloss' and 'Amerika'},
-  booktitle = {Digital Humanities},
+  booktitle = {Digital Humanities Conference},
   year      = {2016},
   owner     = {Vincent},
   timestamp = {2020.07.23},
@@ -25695,6 +25810,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2021.12.27},
 }
 
+@InProceedings{Koeper2016,
+  author    = {Köper, M. and Schulte im Walde, S.},
+  title     = {Automatically Generated Affective Norms of Abstractness, Arousal, Imageability and Valence for 350 000 German Lemmas},
+  booktitle = {10th International Conference on Language Resources and Evaluation},
+  year      = {2016},
+  pages     = {2595-2598},
+  owner     = {Vincent},
+  timestamp = {2022.12.06},
+  url       = {https://aclanthology.org/L16-1413},
+}
+
 @Article{Kokash2022,
   author    = {Kokash, N. and Romanello, M. and Suyver, E. and Colavizza, G.},
   title     = {From Books to Knowledge Graphs},
@@ -25814,6 +25940,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1080/15427951.2012.625260},
   owner     = {Vincent},
   timestamp = {2021.09.21},
+}
+
+@InProceedings{Konle2022,
+  author    = {Konle, L. and Jannidis , F.},
+  title     = {Modeling Plots of Narrative Texts as Temporal Graphs},
+  booktitle = {Computational Humanities Research Conference},
+  year      = {2022},
+  volume    = {3290},
+  series    = {CEUR Workshop Proceedings},
+  pages     = {318-336},
+  owner     = {Vincent},
+  timestamp = {2022.12.01},
+  url       = {https://ceur-ws.org/Vol-3290/long_paper2313.pdf},
 }
 
 @InProceedings{Konovalova2022,
@@ -26352,7 +26491,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 @InProceedings{Krug2017,
   author    = {Krug, M. and Reger, I. and Jannidis, F. and Weimer, L. and Madarász, N. and Puppe, F.},
   title     = {Overcoming Data Sparsity for Relation Detection in German Novels},
-  booktitle = {Digital Humanities},
+  booktitle = {Digital Humanities Conference},
   year      = {2017},
   owner     = {Vincent},
   timestamp = {2018.06.12},
@@ -26454,7 +26593,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 @InProceedings{Kubis2019,
   author    = {Kubis, M. and Mickiewicz, A.},
   title     = {Quantitative Analysis of Character Networks in Polish XIX and XX Century Novels},
-  booktitle = {Digital Humanities},
+  booktitle = {Digital Humanities Conference},
   year      = {2019},
   owner     = {Vincent},
   timestamp = {2021.03.27},
@@ -26732,6 +26871,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.10},
 }
 
+@InProceedings{Kurfali2021,
+  author    = {Kurfalı, M. and Wiren, M.},
+  title     = {Breaking the Narrative: Scene Segmentation through Sequential Sentence Classification},
+  booktitle = {Shared Task on Scene Segmentation.},
+  year      = {2021},
+  volume    = {3001},
+  series    = {CEUR Workshop Proceedings},
+  pages     = {49-53},
+  owner     = {Vincent},
+  timestamp = {2022.12.06},
+  url       = {http://ceur-ws.org/Vol-3001/paper6.pdf},
+}
+
 @InProceedings{Kurlander1996,
   author    = {Kurlander, D. and Skelly, T. and Salesin, D.},
   title     = {Comic Chat},
@@ -26901,8 +27053,8 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   journal   = {Advances in Complex Systems},
   year      = {2022},
   volume    = {25},
-  number    = {2},
-  pages     = {22400033},
+  number    = {5\&6},
+  pages     = {2240003},
   doi       = {10.1142/S0219525922400033},
   owner     = {Vincent},
   timestamp = {2022.01.22},
@@ -27052,7 +27204,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 @InProceedings{Lancaster2010,
   author    = {Lancaster, L.},
   title     = {Text to Image to Analysis: Visualization of Chinese Buddhist Canon},
-  booktitle = {Digital Humanities},
+  booktitle = {Digital Humanities Conference},
   year      = {2010},
   owner     = {Vincent},
   timestamp = {2019.03.25},
@@ -32843,6 +32995,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://gallica.bnf.fr/ark:/12148/bpt6k934150p.image},
 }
 
+@Book{Meister2003,
+  title     = {Computing Action: A Narratological Approach},
+  publisher = {Walter de Gruyter},
+  year      = {2003},
+  author    = {Meister, J. C. and Ryan, M.-L.},
+  volume    = {2},
+  series    = {Narratologia},
+  doi       = {10.1515/9783110201796},
+  owner     = {Vincent},
+  timestamp = {2022.12.06},
+}
+
 @InProceedings{Mellace2020,
   author    = {Mellace, S. and Vani, K and Antonucci, A.},
   title     = {Relation Clustering in Narrative Knowledge Graphs},
@@ -32876,6 +33040,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/978-94-007-0753-5_1131},
   owner     = {Vincent},
   timestamp = {2021.12.27},
+}
+
+@InProceedings{Mende2022,
+  author    = {Mende, J.},
+  title     = {Visualising Multilingual Literary Networks in 19th Century Monolingual Literary History},
+  booktitle = {Digital Humanities Conference},
+  year      = {2022},
+  pages     = {45-46},
+  owner     = {Vincent},
+  timestamp = {2022.11.29},
+  url       = {https://elte-dh.hu/wp-content/uploads/2022/11/dh_absztrakt.pdf#page=26},
 }
 
 @Article{Mendelson1976,
@@ -33042,6 +33217,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2022.08.31},
   url       = {https://www.jstor.org/stable/30227393},
+}
+
+@InCollection{Michail2015,
+  author    = {Michail, O.},
+  title     = {An Introduction to Temporal Graphs: An Algorithmic Perspective},
+  booktitle = {Algorithms, Probability, Networks, and Games - Scientific Papers and Essays Dedicated to Paul G. Spirakis on the Occasion of His 60th Birthday},
+  publisher = {Springer},
+  year      = {2015},
+  volume    = {9295},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {308-343},
+  doi       = {10.1007/978-3-319-24024-4_18},
+  owner     = {Vincent},
+  timestamp = {2022.12.06},
 }
 
 @Article{Michel2010,
@@ -34779,7 +34968,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 @InProceedings{Murr2017,
   author    = {Murr, S. and Barth, F.},
   title     = {Digital Analysis of the Literary Reception of J. W. v. Goethe's 'Die Leiden des jungen Werthers'},
-  booktitle = {Digital Humanities},
+  booktitle = {Digital Humanities Conference},
   year      = {2017},
   owner     = {Vincent},
   timestamp = {2020.07.23},
@@ -37107,6 +37296,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.researchgate.net/publication/296787912_Storyworlds_and_groups},
 }
 
+@Article{Pan2011,
+  author    = {Pan, R. K. and Saramäki, J.},
+  title     = {Path lengths, correlations, and centrality in temporal networks},
+  journal   = {Physical Review E},
+  year      = {2011},
+  volume    = {84},
+  number    = {1},
+  pages     = {016105},
+  doi       = {10.1103/PhysRevE.84.016105},
+  owner     = {Vincent},
+  timestamp = {2017.03.14},
+}
+
 @InProceedings{Pan2018,
   author    = {Pan, S. and Hu, R. and Long, G. and Jiang, J. and Yao, L. and Zhang, C.},
   title     = {Adversarially Regularized Graph Autoencoder for Graph Embedding},
@@ -37954,16 +38156,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.01.25},
 }
 
-@Article{Perri2022,
+@InProceedings{Perri2022,
   author    = {Perri, V. and Qarkaxhija, L. and Zehe, A. and Hotho, A. and Scholtes, I.},
   title     = {One Graph to Rule them All: Using NLP and Graph Neural Networks to analyse Tolkien's Legendarium},
-  journal   = {arXiv},
+  booktitle = {Computational Humanities Research},
   year      = {2022},
-  volume    = {cs.CL},
-  pages     = {2210.07871},
+  volume    = {3290},
+  series    = {CEUR Workshop Proceedings},
+  pages     = {291-317},
   owner     = {Vincent},
   timestamp = {2022.10.20},
-  url       = {https://arxiv.org/abs/2210.07871},
+  url       = {https://ceur-ws.org/Vol-3290/long_paper2171.pdf},
 }
 
 @Article{Perry1979,
@@ -38434,7 +38637,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 @InProceedings{Piper2017,
   author    = {Piper, A. and Algee-Hewitt, M. and Sinha, K. and Ruths, D. and Vala, H.},
   title     = {Studying literary characters and character networks},
-  booktitle = {Digital Humanities},
+  booktitle = {Digital Humanities Conference},
   year      = {2017},
   owner     = {Vincent},
   timestamp = {2020.01.04},
@@ -38456,10 +38659,11 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   title         = {Narrative Theory for Computational Narrative Understanding},
   booktitle     = {Conference on Empirical Methods in Natural Language Processing},
   year          = {2021},
+  pages         = {298-311},
   __markedentry = {[Vincent:]},
+  doi           = {10.18653/v1/2021.emnlp-main.26},
   owner         = {Vincent},
   timestamp     = {2021.09.11},
-  url           = {https://people.ischool.berkeley.edu/~dbamman/pubs/pdf/piper_so_bamman_emnlp2021.pdf},
 }
 
 @InProceedings{Piper2021a,
@@ -40155,6 +40359,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.18419/opus-10144},
   owner     = {Vincent},
   timestamp = {2020.03.15},
+}
+
+@Article{Reiter2022,
+  author    = {Reiter, N. and Sieker, J. and Guhr, S. and Gius, E. and Zarrieß, S.},
+  title     = {Exploring Text Recombination for Automatic Narrative Level Detection},
+  journal   = {13th Language Resources and Evaluation Conference},
+  year      = {2022},
+  pages     = {3346-3353},
+  owner     = {Vincent},
+  timestamp = {2022.12.06},
+  url       = {https://aclanthology.org/2022.lrec-1.357/},
 }
 
 @PhdThesis{Reling1994,
@@ -42579,7 +42794,9 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   title     = {Network analysis of the {Kyiv Bylyny} cycle - East {Slavic} epic narratives},
   journal   = {Advances in Complex Systems},
   year      = {2022},
-  volume    = {in press},
+  volume    = {25},
+  number    = {4},
+  pages     = {2240007},
   doi       = {10.1142/S0219525922400070},
   owner     = {Vincent},
   timestamp = {2022.03.25},
@@ -42925,7 +43142,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 @InProceedings{Schmidt2019,
   author    = {Schmidt, T. and Burghardt, M. and Dennerlein, K. and Wolff, C.},
   title     = {Katharsis– A tool for computational drametrics},
-  booktitle = {Digital Humanities},
+  booktitle = {Digital Humanities Conference},
   year      = {2019},
   owner     = {Vincent},
   timestamp = {2021.06.21},
@@ -42935,7 +43152,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 @InProceedings{Schmidt2019a,
   author    = {Schmidt, T.},
   title     = {Distant reading sentiments and emotions in historic german plays},
-  booktitle = {Digital Humanities},
+  booktitle = {Digital Humanities Conference},
   year      = {2019},
   doi       = {10.5283/epub.43592},
   owner     = {Vincent},
@@ -44293,6 +44510,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/tvcg.2006.166},
   owner     = {Vincent},
   timestamp = {2019.04.12},
+}
+
+@Article{Shokoohi-Yekta2016,
+  author    = {Shokoohi-Yekta, M. and Hu, B. and Jin, H. and Wang, J. and Keogh, E.},
+  title     = {Generalizing {DTW} to the multi-dimensional case requires an adaptive approach},
+  journal   = {Data Mining and Knowledge Discovery},
+  year      = {2016},
+  volume    = {31},
+  pages     = {1-31},
+  doi       = {10.1007/s10618-016-0455-0},
+  owner     = {Vincent},
+  timestamp = {2022.12.06},
 }
 
 @InCollection{Short1989,
@@ -46328,7 +46557,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 @InProceedings{Suen2013,
   author    = {Suen, C. and Kuenzel, L. and Gil, S.},
   title     = {Extraction and analysis of character interaction networks from plays and movies},
-  booktitle = {Digital Humanities},
+  booktitle = {Digital Humanities Conference},
   year      = {2013},
   owner     = {xavier},
   timestamp = {2015.09.06},
@@ -46645,6 +46874,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1073/pnas.1004008107},
   owner     = {Vincent},
   timestamp = {2015.07.07},
+}
+
+@InProceedings{Szemes2022,
+  author    = {Szemes, B. and Vida, B.},
+  title     = {Structural differences between tragedies and comedies},
+  booktitle = {Digital Humanities Conference},
+  year      = {2022},
+  pages     = {86-87},
+  owner     = {Vincent},
+  timestamp = {2022.11.29},
+  url       = {https://elte-dh.hu/wp-content/uploads/2022/11/dh_absztrakt.pdf#page=26},
 }
 
 @Article{Szilas2007,
@@ -47033,6 +47273,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.02},
   url       = {http://tango.bol.ucla.edu/publications/A99.pdf},
+}
+
+@InCollection{Tangherlini2015,
+  author    = {Tangherlini, T. R.},
+  title     = {Facebook for Vikings: Social Network Analysis and {Egil}'s Saga},
+  booktitle = {Egil, the Viking Poet},
+  publisher = {University of Toronto Press},
+  year      = {2015},
+  series    = {Toronto Old Norse-Icelandic Series},
+  chapter   = {9},
+  pages     = {149-172},
+  doi       = {10.3138/9781442621237-010},
+  owner     = {Vincent},
+  timestamp = {2022.12.03},
 }
 
 @Article{Tangherlini2016,
@@ -47582,6 +47836,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2022.06.22},
 }
 
+@Article{Thompson2017a,
+  author    = {Thompson, W. H. and Brantefors, P. and Fransson, P.},
+  title     = {From static to temporal network theory: Applications to functional brain connectivity},
+  journal   = {Network Neuroscience},
+  year      = {2017},
+  volume    = {1},
+  number    = {2},
+  pages     = {69-99},
+  doi       = {10.1162/netn_a_00011},
+  owner     = {Vincent},
+  timestamp = {2022.12.06},
+}
+
 @Book{Thomson1952,
   title     = {The Gaelic Sources of Macpherson's Ossian},
   publisher = {Oliver \& Boyd},
@@ -47919,7 +48186,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 @InProceedings{Tonra2017,
   author    = {Tonra, J. and Kelly, D. and Reid, L.},
   title     = {Personæ: A Character-Visualisation Tool for Dramatic Texts},
-  booktitle = {Digital Humanities},
+  booktitle = {Digital Humanities Conference},
   year      = {2017},
   pages     = {627-630},
   owner     = {Vincent},
@@ -48284,7 +48551,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 @InProceedings{Trilcke2016,
   author    = {Trilcke, P. and Fischer, F. and Göbel, M. and Kampkaspar, D.},
   title     = {Theatre Plays as 'Small Worlds'? Network Data on the History and Typology of German Drama, 1730–1930},
-  booktitle = {Digital Humanities},
+  booktitle = {Digital Humanities Conference},
   year      = {2016},
   pages     = {360},
   owner     = {Vincent},
@@ -49114,6 +49381,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url          = {https://towardsdatascience.com/mining-modelling-character-networks-part-ii-a3d77de89638},
   owner        = {Vincent},
   timestamp    = {2022.06.06},
+}
+
+@InProceedings{Vauth2021,
+  author    = {Vauth, M. and Hatzel, H. O. and Gius, E. and Biemann, C.},
+  title     = {Automated Event Annotation in Literary Texts},
+  booktitle = {Computational Humanities Research Conference},
+  year      = {2021},
+  volume    = {2989},
+  series    = {CEUR Workshop Proceedings},
+  pages     = {333-345},
+  owner     = {Vincent},
+  timestamp = {2022.12.06},
+  url       = {https://ceur-ws.org/Vol-2989/short_paper18.pdf},
 }
 
 @Article{Vazquez2002a,
@@ -51654,7 +51934,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 @InProceedings{Xanthos2016,
   author    = {Xanthos, A. and Pante, I. and Rochat, Y. and Grandjean, M.},
   title     = {Visualising the dynamics of character networks},
-  booktitle = {Digital Humanities},
+  booktitle = {Digital Humanities Conference},
   year      = {2016},
   pages     = {417-419},
   owner     = {Vincent},
@@ -52966,6 +53246,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.18653/v1/2021.eacl-main.276},
   owner     = {Vincent},
   timestamp = {2022.11.08},
+}
+
+@InProceedings{Zehe2021a,
+  author    = {Zehe, A. and Konle, L. and Guhr, S. and Dümpelmann, L. and Gius, E. and Hotho, A. and Jannidis, F. and Kaufmann, L. and Krug, M. and Puppe, F. and Reiter, N. and Schreiber, A.},
+  title     = {Shared Task on Scene Segmentation @KONVENS 2021},
+  booktitle = {Shared Task on Scene Segmentation},
+  year      = {2021},
+  pages     = {1-21},
+  owner     = {Vincent},
+  timestamp = {2022.12.06},
+  url       = {https://ceur-ws.org/Vol-3001/paper1.pdf},
 }
 
 @Article{Zelenko2003,
