--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -1567,6 +1567,16 @@
   timestamp    = {2018.11.11},
 }
 
+@Book{Andersson1967,
+  title     = {The Icelandic Family Saga: An analytic reading},
+  publisher = {Harvard University Press},
+  year      = {1967},
+  author    = {Andersson, T. M.},
+  doi       = {10.4159/harvard.9780674729292},
+  owner     = {Vincent},
+  timestamp = {2022.12.07},
+}
+
 @InProceedings{Andrea2020,
   author    = {Andrea, M. and Dominique, B. and Dell’Orletta, F.},
   title     = {The Style of a Successful Story: a Computational Study on the Fanfiction Genre},
@@ -5803,6 +5813,16 @@
   timestamp = {2019.04.12},
 }
 
+@Book{Bott1957,
+  title     = {Family and Social Network: Roles, Norms, and External Relationships in Ordinary Urban Families},
+  publisher = {Tavistock Publications},
+  year      = {1957},
+  author    = {Bott, E.},
+  owner     = {Vincent},
+  timestamp = {2022.12.07},
+  url       = {https://www.routledge.com/Family-and-Social-Network-Roles-Norms-and-External-Relationships-in-Ordinary/Spillius/p/book/9780415488266},
+}
+
 @Book{BottSpillius2002,
   title     = {Family and Social Network: Roles, Norms and External Relationships in Ordinary Urban Families. Routledge (2014)},
   publisher = {Routledge},
@@ -7832,6 +7852,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2022.08.30},
 }
 
+@Book{Carrington2005,
+  title     = {Models and Methods in Social Network Analysis},
+  publisher = {Cambridge University Press},
+  year      = {2005},
+  author    = {Carrington, P. J. and Scott, J. and Wasserman, S.},
+  owner     = {Vincent},
+  timestamp = {2016.02.27},
+  url       = {http://www.cambridge.org/co/academic/subjects/sociology/sociology-general-interest/models-and-methods-social-network-analysis},
+}
+
 @InCollection{Carrington2011,
   author    = {Carrington, P. J. and Scott, J.},
   title     = {Introduction},
@@ -9759,6 +9789,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2019.04.03},
 }
 
+@Book{Clover1982,
+  title     = {The Medieval Saga},
+  publisher = {Cornell University Press},
+  year      = {1982},
+  author    = {Clover, C. J.},
+  owner     = {Vincent},
+  timestamp = {2022.12.07},
+  url       = {https://www.cornellpress.cornell.edu/book/9781501740503/the-medieval-saga/},
+}
+
 @Article{Cockburn2009,
   author    = {Cockburn, A. and Karlson, A. and Bederson, B. B.},
   title     = {A review of overview+detail, zooming, and focus+context interfaces},
@@ -10180,6 +10220,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1145/1083314.1083317},
   owner     = {Vincent},
   timestamp = {2019.06.28},
+}
+
+@Article{Cormack2006,
+  author    = {Cormack, M.},
+  title     = {Fact and Fiction in the Icelandic Sagas},
+  journal   = {History Compass},
+  year      = {2006},
+  volume    = {5},
+  number    = {1},
+  pages     = {201-217},
+  doi       = {10.1111/j.1478-0542.2006.00363.x},
+  owner     = {Vincent},
+  timestamp = {2022.12.07},
 }
 
 @InProceedings{Corman2013,
@@ -17126,6 +17179,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://college.holycross.edu/interfaces/vol27/gaskill_essay.pdf},
 }
 
+@Article{Gaskins2005,
+  author    = {Gaskins, R.},
+  title     = {Network Dynamics in Saga and Society},
+  journal   = {Scandinavian Studies},
+  year      = {2005},
+  volume    = {77},
+  number    = {2},
+  pages     = {201-216},
+  owner     = {Vincent},
+  timestamp = {2022.12.07},
+  url       = {https://www.jstor.org/stable/40920585},
+}
+
 @InCollection{Gates2006,
   author    = {Gates, H. L.},
   title     = {The Black Letters on the Sign: W.E.B. Du Bois and the Canon},
@@ -23629,6 +23695,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2021.09.16},
 }
 
+@Article{Johnson1991,
+  author    = {Johnson, S. B. and Johnson, R. C.},
+  title     = {Support and conflict of kinsmen in {Norse} {Earldoms}, {Icelandic} families, and the {English} royalty},
+  journal   = {Ethology and Sociobiology},
+  year      = {1991},
+  volume    = {12},
+  number    = {3},
+  pages     = {211-220},
+  doi       = {10.1016/0162-3095(91)90004-a},
+  owner     = {Vincent},
+  timestamp = {2022.12.07},
+}
+
 @InCollection{Johnson1994,
   author    = {Johnson, J.},
   title     = {Anthropological Contributions to the Study of Social Networks: A Review},
@@ -29972,6 +30051,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2021.06.24},
 }
 
+@InCollection{Loennroth2007,
+  author    = {Lönnroth, L.},
+  title     = {Structuralist Approaches to Saga Literature},
+  booktitle = {Medieval Texts and Cultures of Northern Europe},
+  publisher = {Brepols Publishers},
+  year      = {2007},
+  pages     = {63-73},
+  doi       = {10.1484/m.tcne-eb.3.4068},
+  owner     = {Vincent},
+  timestamp = {2022.12.07},
+}
+
 @InCollection{Loewenstein2018,
   author    = {Loewenstein, D.},
   title     = {Paradise Lost},
@@ -31822,6 +31913,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/eScience.2015.12},
   owner     = {Vincent},
   timestamp = {2018.10.27},
+}
+
+@Article{Marvel2009,
+  author        = {Marvel, S. A. and Strogatz, S. H. and Kleinberg, J. M.},
+  title         = {Energy Landscape of Social Balance},
+  journal       = {Physical Review Letters},
+  year          = {2009},
+  volume        = {103},
+  number        = {1},
+  pages         = {198701},
+  __markedentry = {[Vincent:]},
+  doi           = {10.1103/PhysRevLett.103.198701},
+  owner         = {Vincent},
+  timestamp     = {2017.04.29},
 }
 
 @Article{Marvel2011,
@@ -36428,6 +36533,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2022.06.22},
 }
 
+@Article{Norrick2005,
+  author    = {Norrick, N. R.},
+  title     = {The dark side of tellability},
+  journal   = {Narrative Inquiry},
+  year      = {2005},
+  volume    = {15},
+  number    = {2},
+  pages     = {323-343},
+  doi       = {10.1075/ni.15.2.07nor},
+  owner     = {Vincent},
+  timestamp = {2022.12.07},
+}
+
 @Book{Norris1997,
   title     = {Markov Chains},
   publisher = {Cambridge University Press},
@@ -39533,6 +39651,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.23},
 }
 
+@Book{Quinn2007,
+  title     = {Learning and Understanding in the Old Norse World: Essays in Honour of Margaret Clunies Ross},
+  publisher = {Brepols},
+  year      = {2007},
+  author    = {Quinn, J. and Heslop, K. and Wills, T.},
+  volume    = {18},
+  series    = {Medieval Texts and Cultures of Northern Europe},
+  owner     = {Vincent},
+  timestamp = {2022.12.07},
+  url       = {https://www.brepols.net/products/IS-9782503525808-1},
+}
+
 @Book{Quint1993,
   title     = {Epic and Empire: Politics and Generic Form from Virgil to Milton},
   publisher = {Princeton University Press},
@@ -39916,6 +40046,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/bf02476441},
   owner     = {Vincent},
   timestamp = {2020.07.23},
+}
+
+@InCollection{Rapoport1963,
+  author    = {Rapoport, A.},
+  title     = {Mathematical models of social interaction},
+  booktitle = {Handbook of Mathematical Psychology},
+  publisher = {John Wiley \& Sons},
+  year      = {1963},
+  volume    = {2},
+  chapter   = {14},
+  pages     = {493-580},
+  owner     = {Vincent},
+  timestamp = {2021.03.25},
+  url       = {https://archive.org/details/handbookofmathem017893mbp},
 }
 
 @Article{Rapoport2007,
@@ -41197,6 +41341,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {http://www.digitalhumanities.org/dhq/vol/7/3/000166/000166.html},
 }
 
+@Article{Robinson1981,
+  author    = {Robinson, J. A.},
+  title     = {Personal Narratives Reconsidered},
+  journal   = {The Journal of American Folklore},
+  year      = {1981},
+  volume    = {94},
+  number    = {371},
+  pages     = {58},
+  doi       = {10.2307/540776},
+  owner     = {Vincent},
+  timestamp = {2022.12.07},
+}
+
 @Electronic{Robinson2015,
   author       = {Robinson, D.},
   month        = {12},
@@ -42320,6 +42477,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/978-3-030-83418-0_13},
   owner     = {Vincent},
   timestamp = {2022.01.07},
+}
+
+@Book{Sacks1992,
+  title     = {Lectures on Conversation},
+  publisher = {Blackwell},
+  year      = {1992},
+  author    = {Sacks, H. and Jefferson, G.},
+  owner     = {Vincent},
+  timestamp = {2022.12.07},
+  url       = {https://www.wiley.com/en-gb/Lectures+on+Conversation%2C+Volumes+I+and+II-p-9781444328301},
 }
 
 @InProceedings{Sadikov2009,
@@ -44674,6 +44841,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/978-3-319-46448-0_31},
   owner     = {Vincent},
   timestamp = {2020.01.03},
+}
+
+@Book{Sigurosson2004,
+  title     = {The Medieval Icelandic Saga and Oral Tradition: A Discourse on Method},
+  publisher = {Harvard University Press},
+  year      = {2004},
+  author    = {Sigurðsson, G.},
+  volume    = {2},
+  series    = {Milman Parry Collection of Oral Literature},
+  owner     = {Vincent},
+  timestamp = {2022.12.07},
+  url       = {https://chs.harvard.edu/book/sigurdsson-gisli-the-medieval-icelandic-saga-and-oral-tradition-a-discourse-on-method/},
 }
 
 @Book{Silge2017,
@@ -47261,6 +47440,28 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/cvpr42600.2020.00377},
   owner     = {Vincent},
   timestamp = {2021.09.19},
+}
+
+@Book{Tangherlini1994,
+  title     = {Interpreting Legend: Danish Storytellers and Their Repertoires},
+  publisher = {Garland},
+  year      = {1994},
+  author    = {Tangherlini, T. R.},
+  owner     = {Vincent},
+  timestamp = {2022.12.07},
+  url       = {https://www.routledge.com/Interpreting-Legend-Pbdirect-Danish-Storytellers-and-their-Repertoires/Tangherlini/p/book/9781138845534},
+}
+
+@Article{Tangherlini1998,
+  author    = {Tangherlini, T. R.},
+  title     = {Barter and Games: Economics and the Supernatural in Danish Legendry},
+  journal   = {Arv},
+  year      = {1998},
+  volume    = {54},
+  pages     = {41-62},
+  owner     = {Vincent},
+  timestamp = {2022.12.07},
+  url       = {https://berkeley.academia.edu/TimothyTangherlini},
 }
 
 @Article{Tangherlini2013,
